# spider-robot

./: .gitignore  BUILD_FIXES.md  GAZEBO_QUICK_START.md  README.md  install_gazebo.sh  standalone_simulation.py
arduino/core/: config.h  fpga_interface.cpp  fpga_interface.h  hexapod_main.ino  ros2_interface.cpp  ros2_interface.h
arduino/drivers/: leg_controller.cpp  leg_controller.h
arduino/gait/: gait_engine.cpp  gait_engine.h
arduino/sensors/: force_sensor.cpp  force_sensor.h  imu_sensor.cpp  imu_sensor.h
config/: arduino_config.yaml  ros2_config.yaml
docs/: ARCHITECTURE.md  GAZEBO_START_GUIDE.md  INCOMPLETE_IMPLEMENTATIONS.md  INSTALLATION.md  MODULES.md  QUICK_START.md  RUNNING.md  SIMULATION.md  SIMULATION_START_GUIDE.md  TERRAIN_ADAPTATION_ALGORITHM.md  USAGE.md
fpga/: README.md  gait_calculator.v
ros2/hexapod_agriculture/: CMakeLists.txt  package.xml
ros2/hexapod_agriculture/src/: agriculture_node.cpp  harvest_node.cpp  irrigate_node.cpp  monitor_node.cpp
ros2/hexapod_bringup/: CMakeLists.txt  package.xml
ros2/hexapod_bringup/launch/: full_system.launch.py  hexapod.launch.py
ros2/hexapod_description/: CMakeLists.txt  package.xml
ros2/hexapod_description/config/: hexapod_controllers.yaml
ros2/hexapod_description/launch/: gazebo.launch.py
ros2/hexapod_description/urdf/: hexapod.gazebo.xacro  hexapod.ros2_control.xacro  hexapod.urdf.xacro
ros2/hexapod_description/worlds/: empty.world
ros2/hexapod_gait_planner/: CMakeLists.txt  package.xml
ros2/hexapod_gait_planner/src/: dwa_planner.cpp  dwa_planner.hpp  gait_planner.cpp  terrain_adaptation.cpp  terrain_adaptation.hpp
ros2/hexapod_navigation/: CMakeLists.txt  package.xml
ros2/hexapod_navigation/src/: navigation_node.cpp
ros2/hexapod_perception/: CMakeLists.txt  package.xml
ros2/hexapod_perception/src/: perception_node.cpp
ros2/hexapod_simulation/: CMakeLists.txt  package.xml
ros2/hexapod_simulation/launch/: minimal_test.launch.py  simulation.launch.py
ros2/hexapod_simulation/src/: mock_arduino.cpp  mock_sensors.cpp
ros2/hexapod_slam/: CMakeLists.txt  package.xml
ros2/hexapod_slam/src/: slam_node.cpp
ros2/hexapod_task_planning/: CMakeLists.txt  package.xml
ros2/hexapod_task_planning/src/: task_planner.cpp
ros2/hexapod_vision/: CMakeLists.txt  package.xml
ros2/hexapod_vision/include/hexapod_vision/: image_converter.hpp  vit_disease_detector.hpp
ros2/hexapod_vision/src/: object_detector.cpp  vision_node.cpp  vit_disease_detector.cpp
scripts/: build_ros2.sh  quick_test.sh  start_gazebo.sh  test_system.sh
